# fastapi-template

./: .gitignore  Pipfile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .flake8  Dockerfile  Makefile  Pipfile  README.md  celery.entrypoint.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/app/: main.py  worker.py
{{cookiecutter.project_slug}}/app/api/endpoints/: utils.py
{{cookiecutter.project_slug}}/app/core/: celery_app.py  config.py
{{cookiecutter.project_slug}}/app/db/: base_class.py  session.py
{{cookiecutter.project_slug}}/app/tests/: conftest.py
{{cookiecutter.project_slug}}/app/tests/api/: test_celery.py
{{cookiecutter.project_slug}}/scripts/: post_get_project.sh  post_install_project.py
