[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Danil Maximov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
celery = "^5.2.3"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
