[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Danil Maximov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
celery = "^5.2.3"
sqlmodel = "^0.0.6"
alembic = "^1.7.5"
uvicorn = "^0.17.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
