[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Danil Maximov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
celery = "*"
sqlmodel = "*"
alembic = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
